--- a/src/style.css
+++ b/src/style.css
@@ -432,6 +432,10 @@ button:focus {
   margin-top: 0.5em !important;
   margin-bottom: 0.5em !important;
 }
+.footer-container {
+  justify-content: center;
+}
+
 .footer-icons {
   margin-top: 0.5em !important;
   margin-bottom: 0.5em !important;
